# eth-navigator

./: .gitignore  Cargo.toml  Makefile  README.md
bindings/: usdc.rs  usdc_source.sol  weth.rs
src/: addressbook.json  addressbook.rs  config.rs  encoder.rs  evm_interface.rs  handlers.rs  main.rs  resolver.rs  signer_middleware.rs  ui.rs  utils.rs  whitelist.rs
src/bindings/: mod.rs  uniswap_v2_factory.rs  uniswap_v2_pool.rs  uniswap_v2_router.rs  uniswap_v3_factory.rs  uniswap_v3_pool.rs  uniswap_v3_router.rs  usdt.rs  weth.rs
src/bridge/: lifi.rs  lifi_types.rs  mod.rs
